--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,21 @@ section {
 div #dado {
     box-sizing: border-box;
     max-width: 300px;
+    transition: transform .2s ease-in-out;
 }
+
+
 
 img {
     height: 130px;
+    
 }
+
+.is-open {
+    transform: rotate(360deg);
+}
+
+
 
 input {
     margin-top: 30px;
@@ -45,9 +55,21 @@ input {
     padding: 10px 40px;
     border-style: none;
     border-radius: 05px;
-    border: 1.5px solid hsl(0, 0%, 0%, 0.3);
-    background-color: hsl(231, 100%, 67%);
+    border: 1px solid hsl(0, 0%, 0%, 0.3);
+    background-color: #1C7ED6;
     box-shadow: inset 0 -2px hsl(0, 0%, 0%, 0.3);
     color: white;
     font-weight: 600;
+    -webkit-transition: ease background-color 0.2s, ease box-shadow 0.3s;
+    transition: ease background-color 0.2s, ease box-shadow 0.2s;
+}
+
+input:hover {
+    background-color: #2195FE;
+    box-shadow: inset 0 -2px hsl(0, 0%, 0%, 0.3), 0 1px 3px hsl(231, 100%, 66%, 0.5);
+}
+
+input:active {
+    background-color: #535EBA;
+    box-shadow: inset 0 -0.2px hsl(0, 0%, 0%, 0.3);
 }
