--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(81, 236, 247);
+    background-color: #5B9BFF;
 }
 
 section {
@@ -16,8 +16,10 @@ section {
 }
 
 #card {
-    width: 300px;
-    height: 300px;
+    box-sizing: content-box;
+    width: 20em;
+    height: 40em;
+    padding: 0 10%;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 1px 1px 20px hsl(180, 100%, 25%, 0.4);
@@ -36,7 +38,7 @@ div #dado {
 
 
 img {
-    height: 130px;
+    height: 16em;
     
 }
 
@@ -47,29 +49,69 @@ img {
 
 
 input {
-    margin-top: 30px;
-    box-sizing: border-box;
+    margin-top: 20%;
+    box-sizing: content-box;
+    width: 200px;
     max-width: 300px;
     appearance: none;
     -webkit-appearance: none;
-    padding: 10px 40px;
+    padding: 15px 20px;
     border-style: none;
     border-radius: 05px;
     border: 1px solid hsl(0, 0%, 0%, 0.3);
     background-color: #1C7ED6;
-    box-shadow: inset 0 -2px hsl(0, 0%, 0%, 0.3);
+    box-shadow: inset 0 -4px hsl(0, 0%, 0%, 0.3);
     color: white;
+    font-size: large;
     font-weight: 600;
+    text-align: center;
     -webkit-transition: ease background-color 0.2s, ease box-shadow 0.3s;
     transition: ease background-color 0.2s, ease box-shadow 0.2s;
+    cursor: pointer;
 }
 
 input:hover {
     background-color: #2195FE;
-    box-shadow: inset 0 -2px hsl(0, 0%, 0%, 0.3), 0 1px 3px hsl(231, 100%, 66%, 0.5);
+    box-shadow: inset 0 -4px hsl(0, 0%, 0%, 0.3), 0 1px 3px hsl(231, 100%, 66%, 0.5);
 }
 
 input:active {
     background-color: #535EBA;
     box-shadow: inset 0 -0.2px hsl(0, 0%, 0%, 0.3);
+}
+
+
+
+@media (max-width: 600px){
+
+    #card {
+        box-sizing: border-box;
+        width: 90vw;
+        height: 80vh;
+    }
+
+    img {
+        height: 35vh;
+    }
+
+    input{
+        margin-top: 30%;
+        width: 90%;
+        max-width: 200px;
+        padding: 15px 40px;
+        font-size: 1.5em;
+        box-shadow: inset 0 -4px hsl(0, 0%, 0%, 0.3);
+    }
+
+    input:hover {
+        background-color: #2195FE;
+        box-shadow: inset 0 -4px hsl(0, 0%, 0%, 0.3), 0 1px 3px hsl(231, 100%, 66%, 0.5);
+    }
+
+    input:active {
+        background-color: #535EBA;
+        box-shadow: inset 0 -0.2px hsl(0, 0%, 0%, 0.3);
+    }
+    
+
 }
